Fix logo on mobile

--- a/styles/common.css
+++ b/styles/common.css
@@ -438,14 +438,7 @@ html, body {height: 100%;}
         font-size:0.9em;
     }
     .logo-image {
-            display: block;
-           -moz-box-sizing: border-box;
-            box-sizing: border-box;
-            background: url("../images/logo-name-only.jpg") no-repeat;
-            clip: rect(0px,60px,200px,0px);
-            width: 70px;
             height: 50px;
-            padding-top: 8px;
         }
     .bgColor {
         height: 50px;
